@@ -123,6 +123,7 @@ sub parse
   {
     my $rt = $2;
     return $self->types->{$name} = $self->create_type_closure(
+      $self->abi,
       $self->parse($rt, $opt),
       map { $self->parse($_, $opt) } map { my $t = $_; $t =~ s/^\s+//; $t =~ s/\s+$//; $t } split /,/, $at,
     );
